Makefile C++ flags: warnings

--- a/p06/Makefile
+++ b/p06/Makefile
@@ -1,11 +1,12 @@
 TARGET=p06a p06b
+CXXFLAGS=-Wall -Wextra -pedantic --std=c++23 -O
 
 ALL: test run
 
 .PHONY: test run
 
 ${TARGET}: %: %.cpp
-	$(CXX) --std=c++23 -O3 $< -o $@
+	$(CXX) $(CXXFLAGS) $< -o $@
 
 test: ${TARGET}
 	$(foreach name,$^,./${name} < tests;)
